# amd-act-ii

./: .dockerignore  Dockerfile  Makefile  README.md  cli.py  main.py  pyproject.toml  run_server.sh
.github/workflows/: publish.yml
src/: config.py  logging_config.py
src/agent/: harness.py
src/client/: health.py
src/server/: app.py
tests/: test_cli.py  test_gateway.py
