[project]
name = "bracyn-act-ii"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = "==3.14.*"
dependencies = [
    "openai>=1.0.0",
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",
    "httpx>=0.27.0",
]

[dependency-groups]
dev = [
    "ruff>=0.5.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx2",
    "mypy",
]

[tool.uv]
package = false

[tool.mypy]
strict = true
ignore_missing_imports = true
exclude = [
    ".venv",
]

